--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,21 @@
+body {
+    padding: 16px;
+}
+
+h1 {
+    margin-bottom: 16px;
+}
+
+footer {
+    margin-top: 20px;
+    font-size: 14px;
+    color: gray;
+}
+
 /* プロフィール画像の修正 */
 img {
-    border-radius: 20%;
     width: 200px;
+    border: 2px solid black;
+    border-radius: 20%;
+    margin-bottom: 16px;
 }
