--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body {
     padding: 16px;
     text-align: center;
+    background-image: url('./image/background.png');
+    background-size: cover;
 }
 
 h1 {
